--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,3 +1,11 @@
-<p>
-  page-not-found works!
-</p>
+<h1>VINUM WINE BAR</h1>
+
+<nav>
+  <a routerLink="/wine" routerLinkActive="active">Wine</a>
+  <a routerLink="/cocktails" routerLinkActive="active">Cocktails</a>
+  <a routerLink="/food" routerLinkActive="active">Food</a>
+</nav>
+
+<footer>
+  <span>Vinum Wine Bar | Developed by @jadeallencook</span>
+</footer>
