--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -2,7 +2,8 @@
 
 <nav>
   <a routerLink="/wine" routerLinkActive="active">Wine</a>
-  <a routerLink="/food" routerLinkActive="active">Food & Drinks</a>
+  <a routerLink="/food" routerLinkActive="active">Food</a>
+  <a routerLink="/drinks" routerLinkActive="active">Drinks</a>
 </nav>
 
 <footer>
