--- a/src/app/pages/wine/wine.component.scss
+++ b/src/app/pages/wine/wine.component.scss
@@ -1,35 +1,41 @@
 div {
-    margin: 50px auto;
+    margin: 15px auto;
     width: 95%;
-    max-width: 500px;
+    max-width: 550px;
     > h3 {
         text-align: center;
-        font-size: 1.5em;
-        margin: 50px 0px;
+        font-size: 1em;
+        margin: 10px 0px;
+        font-weight: bold;
+    }
+    > h3.new-page {
+        // PRINTING
+        // margin-top: 2000px;
+        margin-top: 0px;
     }
     > div {
         margin: 0px auto;
-        margin-bottom: 25px;
+        margin-bottom: 10px;
         h4 {
             font-weight: bold;
             margin: 0px;
-            font-size: 1.25em;
+            font-size: .85em;
         }
         p:nth-child(1) {
             margin: 0px;
             width: auto;
             float: right;
-            font-size: 1.15em;
+            font-size: 1em;
             img {
                 height: 13px;
             }
         }
         p:nth-child(3) {
             margin: 0px;
-            font-size: 0.85em;
+            font-size: 0.75em;
         }
         p:nth-child(4) {
-            font-size: 0.85em;
+            font-size: 0.75em;
             font-style: italic;
             margin: 0px;
         }
